# multiroom-spotify-controller

./: .gitignore  README.md  package-lock.json  package.json  setup-project.sh  start-dev.sh
.devcontainer/: Dockerfile  Dockerfile.prod  dependencies.sh  devcontainer.json  docker-compose.yml  post-create.sh  run-dev.sh
backend/: pyproject.toml
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  vite.config.mjs
frontend/src/: App.jsx  SpotifyPlayer.jsx
frontend/src/hooks/: useSpotify.js
